2009-07-29  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-runtime.c (_dl_fixup): Indicate before _dl_lookup_symbol_x
	call that registers used in calling conventions need to be preserved.
	* elf/dl-lookup.c (do_lookup_x): Use RTLD_*_FOREIGN_CALL macros
	to preserve register content if necessary.
	* sysdeps/x86_64/dl-trampoline.S (_dl_x86_64_save_sse): New function.
	(_dl_x86_64_restore_sse): New function.
	* sysdeps/x86_64/tst-xmmymm.sh: There is now one more function that
	is allowed to modify xmm/ymm registers.

	* stdio-common/scanf15.c: Undefine _LIBC.  We want to test from an
	application's perspective.
	* stdio-common/scanf17.c: Likewise.

2009-07-28  Ulrich Drepper  <drepper@redhat.com>

	* csu/libc-tls.c (__libc_setup_tls) [TLS_TCB_AT_TP]: Don't add TCB
	size to memsz.
	(init_static_tls) [TLS_TCB_AT_TP]: Add it to GL(dl_tls_static_size)
	here.
	* elf/dl-reloc.c (_dl_try_allocate_static_tls): Compute freebytes in
	two steps to catch bugs.

2009-07-27  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/tst-xmmymm.sh: Refine testing.  The script now
	determines which files are used in runtime lookups and only checks
	those for SSE use.
	* sysdeps/x86_64/rtld-memchr.c: Removed.  Not needed with refined
	testing.
	* sysdeps/x86_64/rtld-rawmemchr.c: Removed.
	* sysdeps/x86_64/multiarch/rtld-rawmemchr.c: Removed
	* sysdeps/x86_64/Makefile: Emit warning that tst-xmmymm.sh might
	take a while.

	* elf/dl-open.c: Move _dl_scope_free to...
	* elf/dl-scope.c: ...here.  New file.
	* elf/Makefile (dl-routines): Add scope.

	* resolv/resolv.h (RES_USE_DNSSEC): Define.
	* resolv/res_debug.c (p_option): Handle RES_USE_EDNS0 and
	RES_USE_DNSSEC.
	* resolv/res_mkquery.c (__res_nopt): Set flags for RES_USE_DNSSEC.
	* resolv/res_query.c (__libc_res_nquery): Handle RES_USE_DNSSEC in
	all the places we handled RES_USE_EDNS0 only before.
	Patch by Adam Tkac <atkac@redhat.com>.

2009-07-27  Jakub Jelinek  <jakub@redhat.com>
