@@ -1,3 +1,7 @@
+2009-07-28  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* sysdeps/x86_64/dl-trampoline.S: Properly restore AVX registers.
+
 2009-07-29  Ulrich Drepper  <drepper@redhat.com>
 
 	* elf/dl-runtime.c (_dl_fixup): Indicate before _dl_lookup_symbol_x
